yaml-configurations/network-policies/al-nafi-external.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: external
  name: external
  namespace: default
spec:
  containers:
  - env:
    - name: APP_NAME
      value: External al-nafi-application
    - name: BG_COLOR
      value: red
    image: kodekloud/webapp-conntest
    name: external
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
      protocol: TCP
