yaml-configurations/network-policies/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: mysql 
  name: mysql
  namespace: default
spec:
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: password
    image: mysql
    name: mysql
    ports:
    - containerPort: 3306 
      protocol: TCP
