yaml-configurations/network-policies/external-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-policy
  namespace: default
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      name: external
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - port: 8080
      protocol: TCP
